<resources>

    <string name="app_name">Android development</string>

    <!-- Titles -->
    <string name="title_samples">Samples</string>
    <string name="title_fragment_fixe">Fixe fragment</string>
    <string name="title_fragment_dynamic">Dynamic fragment</string>
    <string name="title_listfragment_simple">Simple list</string>
    <string name="title_listfragment_custom">Custom list</string>
    <string name="title_listfragment_dynamic">Dynamic list</string>
    <string name="title_dynamic_ui">Dynamic UI</string>
    <string name="title_fragment_settings">PreferenceFragment</string>
    <string name="title_fragment_dialog">Dialog</string>
    <string name="title_actionbar_simple">Actionbar</string>
    <string name="title_actionbar_contextual">Actionbar contextual</string>
    <string name="title_actionbar_contextual_list">Actionbar contextual with list</string>
    <string name="title_viewpager">ViewPager</string>
    <string name="title_sliding_pane">Sliding Pane Layout</string>
    <string name="title_drawer">Drawer Layout</string>
    <string name="title_multiple_screens">Multiple screens</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_nfc_emulator">NFC Emulator</string>
    <string name="title_nfc_normal">NFC Normal</string>
    <string name="title_nfc_beam">NFC Beam</string>
    <string name="title_remote_data">Retrieve remote data</string>
    <string name="title_request_auth">Authentication</string>
    <string name="title_services_authorization">Service Authorization</string>
    <string name="title_services_sign_in">Sign In with Google Plus</string>

    <!-- Parts -->
    <string name="no_part">No part</string>
    <string name="part_1">Part 1</string>
    <string name="part_2">Part 2</string>
    <string name="part_3">Part 3</string>
    <string name="part_4">Part 4</string>
    <string name="part_5">Part 5</string>
    <string name="part_6">Part 6</string>

    <!-- Chapters -->
    <string name="no_chapter">No chapter</string>
    <string name="chapter_1">Chapter 1</string>
    <string name="chapter_2">Chapter 2</string>
    <string name="chapter_3">Chapter 3</string>
    <string name="chapter_4">Chapter 4</string>
    <string name="chapter_5">Chapter 5</string>

    <!-- MainActivity -->
    <string name="btn_samples">Samples</string>
    <string name="btn_sdz">Go to tutorial on the \"Site du Zéro\"</string>
    <string name="btn_sdz_beta">Go to beta version of the tutorial</string>
    <string name="btn_source">Get source codes</string>

    <!-- Fragments -->
    <string name="btn_fragment_1">Go to fragment 2</string>
    <string name="btn_fragment_2">Go to fragment 1</string>

    <!-- ListView -->
    <string name="text_empty">No item in your ListView</string>
    <string name="image_avatar_description">Avatar of the user</string>

    <string-array name="list_examples">
        <item>Belgique</item>
        <item>France</item>
        <item>Italie</item>
        <item>Espagne</item>
        <item>Portugal</item>
        <item>Suisse</item>
    </string-array>

    <string name="img_country">Flag of country</string>

    <!-- Dialog -->
    <string name="btn_launch_dialog">DialogFragment</string>
    <string name="btn_launch_alert">AlertDialog</string>
    <string name="text_dialog">Text of the DialogFragment</string>
    <string name="btn_dialog">Button of Dialog</string>
    <string name="alert_dialog_ok">Good</string>
    <string name="alert_dialog_cancel">Cancel</string>

    <!-- Preferences -->
    <string name="title_header_1">Header preference 1</string>
    <string name="summary_header_1">Summary header 1</string>
    <string name="title_category_1">Category 1</string>
    <string name="title_category_2">Category 2</string>
    <string name="title_pref_1">Preference 1</string>
    <string name="summary_pref_1">Summary preference 1</string>
    <string name="title_pref_2">Preference 2</string>
    <string name="summary_pref_2">Summary preference 2</string>
    <string name="title_pref_3">Preference 3</string>
    <string name="summary_pref_3">Summary preference 3</string>
    <string name="switch_off_pref_3">OFF</string>
    <string name="switch_on_pref_3">ON</string>
    <string name="title_pref_4">Preference 4</string>
    <string name="summary_pref_4">Summary preference 4</string>
    <string name="title_pref_5">Preference 5</string>
    <string name="summary_pref_5">Summary preference 5</string>
    <string name="title_pref_6">Preference 6</string>
    <string name="summary_pref_6">Summary preference 6</string>

    <string-array name="list_pref_5">
        <item>List Preference 1</item>
        <item>List Preference 2</item>
        <item>List Preference 3</item>
    </string-array>

    <!-- Actionbar -->
    <string name="btn_contextual">Contextual menu</string>
    <string name="toast_home">Return home</string>
    <string name="toast_add">Add something</string>
    <string name="toast_save">Save something</string>
    <string name="toast_search_submit">Submit search</string>
    <string name="toast_crop">Crop something</string>
    <string name="toast_trash">Trash something</string>

    <!-- ViewPager -->
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <!-- Notifications -->
    <string name="notification_action_1">Do an action</string>
    <string name="notification_action_2">Another action</string>
    <string name="btn_basic">Basic</string>
    <string name="btn_big_text">Big text</string>
    <string name="btn_big_pic">Big picture</string>
    <string name="btn_btn_inbox">Complexe</string>
    <string name="basic_title">Basic Notification</string>
    <string name="basic_text">This notification is basic.</string>
    <string name="big_text_title">Big text Notification</string>
    <string name="big_text">This is a bit text. I like chocolate and candy because there are a lot of sugar.</string>
    <string name="big_pic_title">Big picture Notification</string>
    <string name="inbox_title">Inbox Notification</string>

    <!-- Nfc -->
    <string name="btn_nfc">Send a tag</string>
    <string name="text_nfc">Text for NFC</string>
    <string name="text_no_nfc">You didn\'t have NFC!</string>

    <!-- Menus -->
    <string name="menu_github">Project on Github</string>
    <string name="menu_sdz">Tutorial on SdZ</string>
    <string name="menu_randoomz">Tutorial on Randoomz</string>
    <string name="menu_add">Add</string>
    <string name="menu_crop">Crop</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_save">Save</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_trash">Trash</string>

    <!-- Network requests -->
    <string name="request_login">Login</string>
    <string name="request_plus_connect">Google Plus Connect</string>
    <string name="request_twitter_connect">Twitter Connect</string>
    <string name="request_register_email">Email</string>
    <string name="request_register_confirm_pass">Confirm password</string>
    <string name="request_register_password">Password</string>
    <string name="request_register">Register</string>
    <string name="request_section_login">LOGIN</string>
    <string name="request_section_register">REGISTER</string>
    
    <!-- Network security -->
    <string name="security_error_field_required">A value required.</string>
    <string name="security_invalid_email">Invalid email</string>
    <string name="security_invalid_password">Invalid password. 6 caracters min.</string>

    <!-- Other -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="empty_list">Empty list</string>
    <string name="waiting">Wainting &#8230;</string>
    <string name="default_lorem">Haec igitur lex in amicitia sanciatur, ut neque rogemus res turpes nec faciamus rogati. Turpis enim excusatio est et minime accipienda cum in ceteris peccatis, tum si quis contra rem publicam se amici causa fecisse fateatur. Etenim eo loco, Fanni et Scaevola, locati sumus ut nos longe prospicere oporteat futuros casus rei publicae. Deflexit iam aliquantum de spatio curriculoque consuetudo maiorum.</string>

</resources>