<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_key_category_1"
        android:title="@string/title_category_1" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_pref_1"
            android:summary="@string/summary_pref_1"
            android:title="@string/title_pref_1" />

        <Preference
            android:dependency="pref_key_pref_1"
            android:key="pref_key_pref_2"
            android:summary="@string/summary_pref_2"
            android:title="@string/title_pref_2" />

        <SwitchPreference
            android:key="pref_key_pref_3"
            android:summary="@string/summary_pref_3"
            android:switchTextOff="@string/switch_off_pref_3"
            android:switchTextOn="@string/switch_on_pref_3"
            android:title="@string/title_pref_3" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_category_2"
        android:title="@string/title_category_2" >
        <EditTextPreference
            android:key="pref_key_pref_4"
            android:summary="@string/summary_pref_4"
            android:title="@string/title_pref_4" />

        <ListPreference
            android:entries="@array/list_pref_5"
            android:entryValues="@array/list_pref_5"
            android:key="pref_key_pref_5"
            android:summary="@string/summary_pref_5"
            android:title="@string/title_pref_5" />

        <RingtonePreference
            android:key="pref_key_pref_6"
            android:ringtoneType="ringtone"
            android:summary="@string/summary_pref_6"
            android:title="@string/title_pref_6" />
    </PreferenceCategory>

</PreferenceScreen>